--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,9 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
-    id 'application'
+    id 'java'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 repositories {
@@ -16,13 +17,13 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit test framework.
-    testImplementation libs.junit
-
-    // This dependency is used by the application.
-    implementation libs.guava
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'org.mindrot:jbcrypt:0.4'
+    
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation libs.junit
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -32,7 +33,6 @@ java {
     }
 }
 
-application {
-    // Define the main class for the application.
-    mainClass = 'org.example.App'
+springBoot {
+    mainClass = 'ticket.booking.TicketBookingApplication'
 }
