--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-# Ignore Gradle project-specific cache directory
+# Gradle
 .gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# Ignore Gradle build output directory
-build
+# IDE
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+.vscode/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Application
+*.log
+*.pid
